<resources>
    <string name="app_name">Encrytpo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_the_algorithm">Choose the Algorithm</string>
    <string name="sha_256">SHA-256</string>
    <string name="text_here">Text Here ..</string>
    <string name="generate">Encrypt</string>
    <string name="clear">clear</string>
    <string name="copy">Copy</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_and_get_started">Sign up and get started</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="home">Home</string>

    <string-array name="hash_algorithms">

        <item>SHA-256</item>
        <item>SHA-512</item>
        <item>MD5</item>

    </string-array>
</resources>