<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".SignUpActivity">



    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:backgroundTint="@color/teal_200"
        android:src="@drawable/signinup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/create_your_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:text="@string/sign_up_and_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:hint="First Name"
        android:background ="@drawable/custom_input"
        android:textColorHint="@color/grey"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:id="@+id/mailET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:hint="@string/email"
        android:background ="@drawable/custom_input"
        android:textColorHint="@color/grey"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
       android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background ="@drawable/custom_input"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailET" />

    <EditText
        android:id="@+id/confirmpasswordET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/custom_password_icon"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background ="@drawable/custom_input"
        android:textColorHint="@color/grey"
        android:drawablePadding="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/blue"
        android:text="Sign up"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpasswordET" />

    <TextView
        android:id="@+id/already_have_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Already Have an Account?"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>